# swift-vo

./: .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  update.sh
.github/workflows/: pre-commit-ci.yml  smoke-test.yml  testing-and-coverage.yml
swift_vo/: __init__.py  constants.py
swift_vo/base/: api.py
swift_vo/objobssap/: api.py  schema.py  service.py
swift_vo/obsloctap/: api.py  schema.py  service.py
swift_vo/vosi/: __init__.py  api.py
tests/swift_vo/: conftest.py  test_api.py  test_example_module.py  test_obsloctap.py  test_schema.py  test_service.py  test_vosi.py
